PLUGINWIZARD-51 : Refactoring to use MVC library
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51691 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_application.html
@@ -20,14 +20,14 @@
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_application.labelApplicationName} :</label>
                     <div class="controls">   
-                        <input type="text" name="application_name" value="${plugin_model.pluginName?lower_case}" size="30" />
+                        <input type="text" name="application_name" value="<#if application.applicationName??>${application.applicationName}<#else>${plugin_model.pluginName?lower_case}</#if>" />
                     </div>    
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_application.labelApplicationClass} :</label>
                     <div class="controls">
-                        <input type="text" name="application_class" value="${plugin_model.pluginName?cap_first}App" size="30" />
+                        <input type="text" name="application_class" value="<#if application.applicationClass??>${application.applicationClass}<#else>${plugin_model.pluginName?cap_first}App</#if>"  />
                     </div>
                 </div>
 
