--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_application.html
@@ -21,13 +21,13 @@
                  <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationName} :</label>  
                     <div class="controls">                 
-                        <input type="text" name="application_name" value="${application.applicationName}" size="30" />  
+                        <input type="text" name="application_name" value="${application.applicationName}" />  
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_application.labelApplicationClass} :</label> 
                     <div class="controls">                  
-                        <input type="text" name="application_class" value="${application.applicationClass}" size="30" />                            
+                        <input type="text" name="application_class" value="${application.applicationClass}" />                            
                     </div>     
                 </div>
                 <div class="form-actions">                                         
