--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
@@ -83,8 +83,8 @@
             </thead>
 
             <tbody>
-                <#if business_class.attributes?? >
-                <#list business_class.attributes as attribute>
+                <#if attributes_list?? >
+                <#list attributes_list as attribute>
                 <tr>
                     <td>${attribute.attributeName}</td>
                     <td>${attribute.typeDescription}</td>
