--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_portlet_dao_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_portlet_dao_alternative.html
@@ -44,11 +44,10 @@ public final class ${portlet.portletClass}DAO implements I${portlet.portletClass
 {
     ////////////////////////////////////////////////////////////////////////////
     // Constants
-    private static final String SQL_QUERY_SELECT = "SELECT id_portlet, ${portlet.portletTypeName?lower_case}_feed_id FROM ${portlet.portletTypeName?lower_case} WHERE id_portlet = ? ";
-    private static final String SQL_QUERY_INSERT = "INSERT INTO ${portlet.portletTypeName?lower_case} ( id_portlet, ${portlet.portletTypeName?lower_case}_feed_id ) VALUES ( ?, ? )";
+    private static final String SQL_QUERY_SELECT = "SELECT id_portlet FROM ${portlet.portletTypeName?lower_case} WHERE id_portlet = ? ";
+    private static final String SQL_QUERY_INSERT = "INSERT INTO ${portlet.portletTypeName?lower_case} ( id_portlet ) VALUES ( ? )";
     private static final String SQL_QUERY_DELETE = "DELETE FROM ${portlet.portletTypeName?lower_case} WHERE id_portlet = ? ";
-    private static final String SQL_QUERY_UPDATE = "UPDATE ${portlet.portletTypeName?lower_case} SET id_portlet = ?, ${portlet.portletTypeName?lower_case}_feed_id = ? WHERE id_portlet = ? ";
-    private static final String SQL_QUERY_CHECK_PORTLET_LINKED = "SELECT ${portlet.portletTypeName?lower_case}_feed_id FROM ${portlet.portletTypeName?lower_case} WHERE ${portlet.portletTypeName?lower_case}_feed_id = ? ";
+    private static final String SQL_QUERY_UPDATE = "UPDATE ${portlet.portletTypeName?lower_case} SET id_portlet = ? WHERE id_portlet = ? ";
 
     ///////////////////////////////////////////////////////////////////////////////////////
     // Access methods to data
@@ -58,12 +57,12 @@ public final class ${portlet.portletClass}DAO implements I${portlet.portletClass
      *
      * @param portlet The Instance of the Portlet
      */
+    @Override
     public void insert( Portlet portlet )
     {
         ${portlet.portletClass} p = (${portlet.portletClass}) portlet;
         DAOUtil daoUtil = new DAOUtil( SQL_QUERY_INSERT );
         daoUtil.setInt( 1, p.getId(  ) );
-        daoUtil.setString( 2, p.get${portlet.portletClass}FeedId(  ) );
         daoUtil.executeUpdate(  );
         daoUtil.free(  );
     }
@@ -73,6 +72,7 @@ public final class ${portlet.portletClass}DAO implements I${portlet.portletClass
      *
      * @param nPortletId The indentifier of the Portlet
      */
+    @Override
     public void delete( int nPortletId )
     {
         DAOUtil daoUtil = new DAOUtil( SQL_QUERY_DELETE );
@@ -86,13 +86,13 @@ public final class ${portlet.portletClass}DAO implements I${portlet.portletClass
      *
      * @param portlet The reference of the portlet
      */
+    @Override
     public void store( Portlet portlet )
     {
         ${portlet.portletClass} p = (${portlet.portletClass}) portlet;
         DAOUtil daoUtil = new DAOUtil( SQL_QUERY_UPDATE );
         daoUtil.setInt( 1, p.getId(  ) );
-        daoUtil.setString( 2, p.get${portlet.portletClass}FeedId(  ) );
-        daoUtil.setInt( 3, p.getId(  ) );
+        daoUtil.setInt( 2, p.getId(  ) );
 
         daoUtil.executeUpdate(  );
         daoUtil.free(  );
@@ -103,6 +103,7 @@ public final class ${portlet.portletClass}DAO implements I${portlet.portletClass
      * @return portlet The instance of the object portlet
      * @param nIdPortlet The identifier of the portlet
      */
+    @Override
     public Portlet load( int nIdPortlet )
     {
         ${portlet.portletClass} portlet = new ${portlet.portletClass}(  );
@@ -113,7 +114,6 @@ public final class ${portlet.portletClass}DAO implements I${portlet.portletClass
         if ( daoUtil.next(  ) )
         {
             portlet.setId( daoUtil.getInt( 1 ) );
-            portlet.set${portlet.portletClass}FeedId( daoUtil.getString( 2 ) );
         }
 
         daoUtil.free(  );
@@ -121,26 +121,4 @@ public final class ${portlet.portletClass}DAO implements I${portlet.portletClass
         return portlet;
     }
 
-    /**
-     * Checks if a feed is linked to a portlet
-     * @return A boolean
-     * @param nId${portlet.portletClass}Feed The identifier of the ${portlet.portletClass} feed
-     */
-    public boolean checkNoPortletLinked( int nId${portlet.portletClass}Feed )
-    {
-        DAOUtil daoUtil = new DAOUtil( SQL_QUERY_CHECK_PORTLET_LINKED );
-        daoUtil.setInt( 1, nId${portlet.portletClass}Feed );
-        daoUtil.executeQuery(  );
-
-        if ( daoUtil.next(  ) )
-        {
-            daoUtil.free(  );
-
-            return false;
-        }
-
-        daoUtil.free(  );
-
-        return true;
-    }
 }
