--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_portlet_jspbean_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_portlet_jspbean_alternative.html
@@ -1,5 +1,3 @@
-	<#assign nBeginIndex = portlet.portletTypeName?last_index_of("_")>
-	<#assign portletName = portlet.portletTypeName?substring(0, nBeginIndex)?lower_case>
 /*
  * Copyright (c) 2002-2013, Mairie de Paris
  * All rights reserved.
@@ -39,13 +37,8 @@ package fr.paris.lutece.plugins.${plugin_name}.web.portlet;
 import fr.paris.lutece.plugins.${plugin_name}.business.portlet.${portlet.portletClass};
 import fr.paris.lutece.plugins.${plugin_name}.business.portlet.${portlet.portletClass}Home;
 import fr.paris.lutece.portal.business.portlet.PortletHome;
-import fr.paris.lutece.portal.service.template.AppTemplateService;
 import fr.paris.lutece.portal.web.portlet.PortletJspBean;
-import fr.paris.lutece.util.ReferenceList;
 import fr.paris.lutece.util.html.HtmlTemplate;
-
-import java.util.HashMap;
-import java.util.Map;
 
 import javax.servlet.http.HttpServletRequest;
 
@@ -55,36 +48,6 @@ import javax.servlet.http.HttpServletRequest;
  */
 public class ${portlet.portletClass}JspBean extends PortletJspBean
 {
-    ///////////////////////////////////////////////////////////////////////////////////
-    // Constants
-
-    /**
-     * The rights required to use ${portlet.portletClass}JspBean
-     */
-    public static final String RIGHT_MANAGE_ADMIN_SITE = "CORE_ADMIN_SITE";
-
-    ////////////////////////////////
-    private static final String PARAMETER_PAGE_ID = "page_id";
-    private static final String PARAMETER_PORTLET_ID = "portlet_id";
-    private static final String PARAMETER_PORTLET_TYPE_ID = "portlet_type_id";
-    private static final String PARAMETER_FEED_ID = "feed_id";
-    private static final String COMBO_FEED_LIST = "@combo_feeds@";
-    private static final String MARK_FEED_LIST = "feed_list";
-    private static final String MARK_FEED_ID = "default_feed_id";
-
-    //////////////////////////////////////////////////////////////////////////////////
-    //Templates
-    private static final String TEMPLATE_COMBO_FEEDS = "admin/plugins/${plugin_name}/portlet/combo_feed_${portlet.portletClass?lower_case}.html";
-
-    /**
-     * Returns the properties prefix used for ${portlet.portletClass} portlet and defined in lutece.properties file
-     *
-     * @return the value of the property prefix
-     */
-    public String getPropertiesPrefix(  )
-    {
-        return "portlet.${portlet.portletClass}";
-    }
 
     /**
      * Returns the ${portlet.portletClass} form of creation
@@ -92,14 +55,12 @@ public class ${portlet.portletClass}JspBean extends PortletJspBean
      * @param request The Http rquest
      * @return the html code of the ${portlet.portletClass} portlet form
      */
+    @Override
     public String getCreate( HttpServletRequest request )
     {
         String strPageId = request.getParameter( PARAMETER_PAGE_ID );
         String strPortletTypeId = request.getParameter( PARAMETER_PORTLET_TYPE_ID );
         HtmlTemplate template = getCreateTemplate( strPageId, strPortletTypeId );
-        ReferenceList listFeeds = getDummyList();
-        String strHtmlCombo = getFeedIndexCombo( listFeeds, "" );
-        template.substitute( COMBO_FEED_LIST, strHtmlCombo );
 
         return template.getHtml(  );
     }
@@ -109,17 +70,13 @@ public class ${portlet.portletClass}JspBean extends PortletJspBean
      * @param request The Http request
      * @return the html code of the ${portlet.portletClass} form
      */
+    @Override
     public String getModify( HttpServletRequest request )
     {
         String strPortletId = request.getParameter( PARAMETER_PORTLET_ID );
         int nPortletId = Integer.parseInt( strPortletId );
         ${portlet.portletClass} portlet = (${portlet.portletClass}) PortletHome.findByPrimaryKey( nPortletId );
         HtmlTemplate template = getModifyTemplate( portlet );
-
-        // fills the template with specific values
-        ReferenceList listFeeds = getDummyList();
-        String strHtmlCombo = getFeedIndexCombo( listFeeds, portlet.get${portlet.portletClass?cap_first}FeedId(  ) );
-        template.substitute( COMBO_FEED_LIST, strHtmlCombo );
 
         return template.getHtml(  );
     }
@@ -130,6 +87,7 @@ public class ${portlet.portletClass}JspBean extends PortletJspBean
      * @param request The Http request
      * @return The jsp URL which displays the view of the created ${portlet.portletClass} portlet
      */
+    @Override
     public String doCreate( HttpServletRequest request )
     {
         ${portlet.portletClass} portlet = new ${portlet.portletClass}(  );
@@ -137,7 +95,6 @@ public class ${portlet.portletClass}JspBean extends PortletJspBean
         // recovers portlet specific attributes
         String strPageId = request.getParameter( PARAMETER_PAGE_ID );
         int nPageId = Integer.parseInt( strPageId );
-        String strFeedId = request.getParameter( PARAMETER_FEED_ID );
 
         // get portlet common attributes
         String strErrorUrl = setPortletCommonData( request, portlet );
@@ -148,7 +105,6 @@ public class ${portlet.portletClass}JspBean extends PortletJspBean
         }
 
         portlet.setPageId( nPageId );
-        portlet.set${portlet.portletClass?cap_first}FeedId( strFeedId );
 
         // Creates the portlet
         ${portlet.portletClass}Home.getInstance(  ).create( portlet );
@@ -163,6 +119,7 @@ public class ${portlet.portletClass}JspBean extends PortletJspBean
      * @param request The Http request
      * @return The jsp URL which displays the view of the updated portlet
      */
+    @Override
     public String doModify( HttpServletRequest request )
     {
         // fetches portlet attributes
@@ -178,10 +135,6 @@ public class ${portlet.portletClass}JspBean extends PortletJspBean
             return strErrorUrl;
         }
 
-        // fetches portlet specific attributes
-        String strFeedId = request.getParameter( PARAMETER_FEED_ID );
-        portlet.set${portlet.portletClass?cap_first}FeedId( strFeedId );
-
         // updates the portlet
         portlet.update(  );
 
@@ -189,30 +142,4 @@ public class ${portlet.portletClass}JspBean extends PortletJspBean
         return getPageUrl( portlet.getPageId(  ) );
     }
 
-    /**
-     * Return the feed listing depending on rights
-     * @param listFeeds list of available ${portlet.portletClass} feeds
-     * @param strDefaultFeedId The id of the feed used in the context
-     * @return The html code of the combo
-     */
-    String getFeedIndexCombo( ReferenceList listFeeds, String strDefaultFeedId )
-    {
-        Map<String, Object> model = new HashMap<String, Object>(  );
-        model.put( MARK_FEED_LIST, listFeeds );
-        model.put( MARK_FEED_ID, strDefaultFeedId );
-
-        HtmlTemplate templateCombo = AppTemplateService.getTemplate( TEMPLATE_COMBO_FEEDS, getLocale(  ), model );
-
-        return templateCombo.getHtml(  );
-    }
-    //In a real case this method should be collecting Data from a Home
-    
-    ReferenceList getDummyList()
-    {
-       ReferenceList list = new ReferenceList(  );
-     
-        list.addItem( "1", "${portlet.portletClass?cap_first}" );
-		list.addItem( "2", "Two" );
-		return list;
-    }
 }
