--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_portlet.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_portlet.html
@@ -11,7 +11,7 @@
 
     <div class="span8">
 
-        <form class="default-form" method="post" action="jsp/site/Portal.jsp" >
+        <form class="form form-horizontal" method="post" action="jsp/site/Portal.jsp" >
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_modify_portlet.pageTitle}</legend>
 
@@ -35,17 +35,10 @@
                 </div>
 
                 <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_portlet.labelCreationUrl} :</label>
-                    <div class="controls">
-                        <input class="input-xlarge" type="text" name="portlet_creation_url"  size="30" value="${portlet.portletCreationUrl}"  />
-                    </div>  
-                </div>
-
-                <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_portlet.labelUpdateUrl} :</label>
+                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_portlet.labelJspBaseName} :</label>
                     <div class="controls"> 
-                        <input class="input-xlarge" type="text" name="portlet_update_url"  size="30"  value="${portlet.portletUpdateUrl}" />
-                    </div> 
+                        <input class="input-xlarge" type="text" name="jsp_base_name" value="${portlet.jspBaseName}" />
+                    </div>  
                 </div>
 
                 <div class="form-actions">                                          
